tests/spec/emit/snapshots/type_alias_map_comparable_constraint.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type KeyVal<K, V> = Map<K, V>
  
  fn test() -> KeyVal<string, int> {
    let mut m = Map.new<string, int>()
    m["a"] = 1
    m
  }
---
package main

type KeyVal[K comparable, V any] = map[K]V

func test() KeyVal[string, int] {
	m := make(map[string]int)
	m["a"] = 1
	return m
}
