tests/spec/emit/snapshots/type_alias_multi_field_tuple_struct_constructor.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Point2D(int, int)
  type P = Point2D
  
  fn test() -> P {
    P(1, 2)
  }
---
package main

type Point2D struct {
	F0 int
	F1 int
}

type P = Point2D

func test() P {
	return Point2D{
		F0: 1,
		F1: 2,
	}
}
