tests/spec/emit/snapshots/type_alias_native_ufcs_method.snap
---
source: tests/spec/emit/types.rs
description: |
  
  import "go:fmt"
  
  type MyString = string
  
  fn main() {
    let n = MyString.length("hi")
    fmt.Println(n)
  }
---
package main

import "fmt"

type MyString = string

func main() {
	n := len("hi")
	fmt.Println(n)
}
