tests/spec/emit/snapshots/type_alias_struct_static_method.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Box { v: int }
  
  impl Box {
    fn new(v: int) -> Box { Box { v } }
  }
  
  type Alias = Box
  
  fn main() {
    let b = Alias.new(1)
    let _ = b
  }
---
package main

type Box struct {
	v int
}

func Box_new(v int) Box {
	return Box{v: v}
}

type Alias = Box

func main() {
	b := Box_new(1)
	_ = b
}
