tests/spec/emit/snapshots/type_alias_tuple_struct_constructor.snap
---
source: tests/spec/emit/types.rs
description: |
  
  import "go:fmt"
  
  struct Wrap(int)
  type Alias = Wrap
  
  fn main() {
    let v = Alias(1)
    fmt.Println(v)
  }
---
package main

import "fmt"

type Wrap int

type Alias = Wrap

func main() {
	v := Alias(1)
	fmt.Println(v)
}
