tests/spec/emit/snapshots/type_alias_with_generic.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type IntBox = Box<int>
  
  struct Box<T> { value: T }
---
package main

type IntBox = Box[int]

type Box[T any] struct {
	value T
}
