tests/spec/emit/snapshots/type_switch_arm_with_binding_and_guard.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/events"
  
  fn handle(e: events.Event, threshold: int) -> int {
    match e {
      events.Click { x } if x > threshold => x,
      events.Click { x } => x + 1,
      _ => 0,
    }
  }
---
package main

import "example.com/events"

func handle(e events.Event, threshold int) int {
	switch e := e.(type) {
	case events.Click:
		x := e.X
		if x > threshold {
			return x
		}
		return e.X + 1
	default:
		return 0
	}
}
