tests/spec/emit/snapshots/type_switch_binding_used_in_arm.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/events"
  
  fn handle(e: events.Event) -> int {
    match e {
      events.Click { x, y } => x * y,
      events.Scroll { delta } => delta,
      _ => 0,
    }
  }
---
package main

import "example.com/events"

func handle(e events.Event) int {
	switch e := e.(type) {
	case events.Click:
		return e.X * e.Y
	case events.Scroll:
		return e.Delta
	default:
		return 0
	}
}
