tests/spec/emit/snapshots/type_switch_drops_binding_when_no_case_uses_it.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/events"
  
  fn handle(e: events.Event) -> int {
    match e {
      events.Click { .. } => 1,
      events.KeyPress { .. } => 2,
      _ => 0,
    }
  }
---
package main

import "example.com/events"

func handle(e events.Event) int {
	switch e.(type) {
	case events.Click:
		return 1
	case events.KeyPress:
		return 2
	default:
		return 0
	}
}
