tests/spec/emit/snapshots/type_switch_four_guarded_arms_same_type.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/events"
  
  fn handle(e: events.Event) -> int {
    match e {
      events.Click { x } if x > 1000 => 4,
      events.Click { x } if x > 100 => 3,
      events.Click { x } if x > 50 => 2,
      events.Click { x } if x > 0 => 1,
      _ => 0,
    }
  }
---
package main

import "example.com/events"

func handle(e events.Event) int {
	switch e := e.(type) {
	case events.Click:
		if e.X > 1000 {
			return 4
		}
		if e.X > 100 {
			return 3
		}
		if e.X > 50 {
			return 2
		}
		if e.X > 0 {
			return 1
		}
		return 0
	default:
		return 0
	}
}
