tests/spec/emit/snapshots/type_switch_guards_then_unguarded_arm_returning_complex_value.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/events"
  
  fn handle(e: events.Event) -> Option<int> {
    match e {
      events.Click { x } if x > 100 => Some(x * 10),
      events.Click { x } if x > 0 => Some(x),
      events.Click { x } => Some(-x),
      _ => None,
    }
  }
---
package main

import "example.com/events"

func handle(e events.Event) (int, bool) {
	switch e := e.(type) {
	case events.Click:
		x := e.X
		if x > 100 {
			return x * 10, true
		}
		x_1 := e.X
		if x_1 > 0 {
			return x_1, true
		}
		return -e.X, true
	default:
		return 0, false
	}
}
